# macro_railroad_ext

./: .gitignore  .travis.yml  README.md
.github/workflows/: check.yml
extension/: Makefile  manifest.json
extension/chrome_helper/: Cargo.toml
extension/chrome_helper/src/: main.rs
extension/content_scripts/: main.js
extension/integration_test/: Cargo.toml
extension/integration_test/src/: main.rs
extension/options/: options.html
extension/wasm_src/: Cargo.toml  build.rs
extension/wasm_src/src/: lib.rs  util.rs
extension/wasm_src/static/: index.html
