[package]
name = "macro_railroad_ext"
version = "0.1.0"
authors = ["Lukas Lueg <lukas.lueg@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
railroad = "0.1"
macro_railroad = "0.1"
stdweb = "0.4"
syn = { version = "1.0", default_features=false }
rand = { version = "0.7", features=["stdweb"] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.4", features=["chrono"], default_features=false }

[profile.release]
lto = true

[features]
webextension = []
